Se implementan a la liga los servicios y  la base de estos

--- a/blogs/como-gane-un-premio-de-300000-pesos.html
+++ b/blogs/como-gane-un-premio-de-300000-pesos.html
@@ -163,30 +163,38 @@
 		</section>
 	</aside>-->
 	<footer class="container-footer">
-		<p>&copy; 2020. Todos los derechos reservados.</p>
+		<div>
+			<h4>INVENTA TU MUNDO</h4>
+			<p>Inventa tu mundo es proveedor de servicios de tecnología, diseño y dispuesto asesorar 
+				a personas con grandes ideas a llevarlas a la realidad.
+			</p>
+		</div>
 		<div class="nav-footer">
-			<h5>Explorar</h5>
-			<ul class="list">
-				<li><a class="menu-link" href="index.html">Inicio</a></li>
-				<li><a class="menu-link" href="nosotros.html">Acerca de</a></li>
-				<li><a class="menu-link" href="contacto.html">Contacto</a></li>
+			<h4>Explorar</h4>
+			<ul>
+				<li><a href="#">Blogs</a></li>
+				<li><a href="#">Servicios</a></li>
 			</ul>
 		</div>
 		<div class="nav-footer">
-			<h5>Legal</h5>
-			<ul class="list">
-				<li><a class="menu-link" href="privacidad.html">Privacidad</a></li>
-			</ul>
+			<h4>INFORMACION</h4>
+				<h4>LEGAL</h4>
+					<ul class="list">
+						<li><a class="menu-link" href="privacidad.html">Privacidad</a></li>
+					</ul>
 		</div>
 		<div class="nav-social-networks">
-			<h5>Seguir</h5>
+			<h4>SIGUENOS EN REDES</h4>
 			<ul>
-				<li><a href="https://www.facebook.com/InventYourWorld/"><img loading="lazy" src="../img/facebook.png" 
-					alt="imagen logo de facebook"></a></li>
-				<li><a href="#"><img loading="lazy" src="../img/email.png" alt="imagen de un correo"></a></li>
-				<li><a href="#"><img loading="lazy" src="../img/twitter.png" alt="imagen logo de twitter"></a></li>
+				<li><a href="https://www.facebook.com/InventYourWorld/" target="_blank"><img loading="lazy" src="img/facebook.png" alt="Facebook"></a>
+				</li>
+				<li><a href="/www.linkedin.com/company/iyw" target="_blank"><img loading="lazy" src="img/email.png" alt="linkedin"></a>
+				</li>
+				<li><a href="#" target="_blank"><img loading="lazy" src="img/twitter.png" alt="imagen logo de twitter"></a>
+				</li>
 			</ul>	
 		</div>
+		<p>&copy; 2020. Todos los derechos reservados.</p>
 	</footer>
 </body>
 </html>
