--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Equipo de trabajo de IYW nuestro lema es innovar o aprender a mejorar nuestra calidad de trabajo">
 	<meta name="robot" content="index,follow">
-	<title>Inventa Tu Mundo</title>
+
+	<title>Inventa Tu Mundo - creando las ideas</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="fonts/style.css">
 	<link rel="SHORTCUT ICON"  href="img/ico-logo.png">
@@ -18,9 +19,33 @@
 	gtag('js', new Date());
 	gtag('config', 'G-Y4T44TXREG');
 	</script>
+
+	<meta name = "twitter: card" content = "summary"> </meta>
+	<meta name = "twitter: site" content="@gilbertoA514"> </meta>
+	<meta name = "twitter: creator" content = "@gilbertoA514" />
+	<meta name="twitter: title" content="Inventa tu mundo">
+	<meta name="twitter: description" content="Equipo de trabajo de IYW nuestro lema es innovar o aprender a mejorar nuestra calidad de trabajo">
+	<meta name="twitter: image" content="">
+	<meta name="twitter:image:alt" content="beaner">
+
+	<script type="application/ld+json">
+		{
+		  "@context": "http://schema.org",
+		  "@type": "Organization",
+		  "name": "Inventa tu mundo",
+		  "url": "http://inventatumundo.com",
+		  "address": "",
+		  "sameAs": [
+			"https://www.facebook.com/InventYourWorld",
+			"https://twitter.com/iywOriginal",
+			"https://www.linkedin.com/company/iyw"
+		  ]
+		}
+	  </script>
 </head>
 <body>
-	<header class="beaner">
+	<header>
+		<img class="beaner" src="img/banner-movil.png" alt="beaner">
 		<h1 class="beaner-title">Inventa tu mundo</h1>
 		<p>Todo lo que te imagine se puede ser creado, entra e inventemos tu mundo.</p>
 	</header>
@@ -44,25 +69,25 @@
 		<h2>Productos y Servicios</h2>
 		<div class="contenido">		
 			<button class="block">
-				<a href="#">
+				<a href="informatica.html">
 						<img loading="lazy" class="image-block-medium" src="img/pc.png" alt="imagen de un monitor">
 					<h3>INFORMATICA</h3>
 				</a>
 			</button>
 			<button class="block">
-				<a href="#">
+				<a href="electronica.html">
 						<img loading="lazy" class="image-block-medium" src="img/chip.png" alt="imagen de un chip">
 					<h3>ELECTRONICA</h3>
 				</a>
 			</button>
 			<button class="block">
-				<a href="#">
+				<a href="desing.html">
 						<img loading="lazy" class="image-block-medium" src="img/dibujo.png" alt="imagen de una tableta de dibujo">
 					<h3>DISEÑO</h3>
 				</a>
 			</button>
 			<button class="block">
-				<a href="#">
+				<a href="mecatronic.html">
 						<img loading="lazy" class="image-block-medium" src="img/robot-2.png" alt="imagen de dos brazos roboticos">
 					<h3>MECATRONICA</h3>
 				</a>	
@@ -102,38 +127,46 @@
 	</section>
 
 	<footer class="container-footer">
-		<div>
-			<h4>INVENTA TU MUNDO</h4>
-			<p>Inventa tu mundo es proveedor de servicios de tecnología, diseño y dispuesto asesorar 
-				a personas con grandes ideas a llevarlas a la realidad.
-			</p>
+		<div class="footer-left">
+			<div>
+				<h4>INVENTA TU MUNDO</h4>
+				<p>Inventa tu mundo es proveedor de servicios de tecnología, diseño y dispuesto asesorar 
+					a personas con grandes ideas a llevarlas a la realidad.
+				</p>
+			</div>
+			<div class="nav-footer">
+				<h4>Explorar</h4>
+				<ul>
+					<li><a href="#">Blogs</a></li>
+					<li><a href="#">Servicios</a></li>
+				</ul>
+			</div>
+			<div class="nav-footer">
+				<h4>INFORMACION</h4>
+					<h4>LEGAL</h4>
+						<ul class="list">
+							<li><a class="menu-link" href="privacidad.html">Privacidad</a></li>
+						</ul>
+			</div>
+			<p>&copy; 2020. Todos los derechos reservados.</p>
 		</div>
-		<div class="nav-footer">
-			<h4>Explorar</h4>
-			<ul>
-				<li><a href="#">Blogs</a></li>
-				<li><a href="#">Servicios</a></li>
-			</ul>
+		<div class="footer-right">
+			<div class="nav-social-networks">
+				<h4>SIGUENOS EN REDES</h4>
+				<ul>
+					<li><a href="https://www.facebook.com/InventYourWorld/" target="_blank"><img loading="lazy" src="img/facebook.png" alt="Facebook"></a>
+					</li>
+					<li><a href="https://www.linkedin.com/company/iyw" target="_blank"><img loading="lazy" src="img/linkedin.png" alt="linkedin"></a>
+					</li>
+					<li><a href="https://twitter.com/iywOriginal" target="_blank"><img loading="lazy" src="img/twitter.png" alt="imagen logo de twitter"></a>
+					</li>
+					<li><a href="" target="_blank"><img loading="lazy" src="img/correo.png" alt="correo"></a></li>
+					<li><a href="" target="_black"><img loading="lazy" src="img/instagram.png" alt="instagram"></a></li>
+				</ul>	
+			</div>
 		</div>
-		<div class="nav-footer">
-			<h4>INFORMACION</h4>
-				<h4>LEGAL</h4>
-					<ul class="list">
-						<li><a class="menu-link" href="privacidad.html">Privacidad</a></li>
-					</ul>
-		</div>
-		<div class="nav-social-networks">
-			<h4>SIGUENOS EN REDES</h4>
-			<ul>
-				<li><a href="https://www.facebook.com/InventYourWorld/" target="_blank"><img loading="lazy" src="img/facebook.png" alt="Facebook"></a>
-				</li>
-				<li><a href="/www.linkedin.com/company/iyw" target="_blank"><img loading="lazy" src="img/email.png" alt="linkedin"></a>
-				</li>
-				<li><a href="#" target="_blank"><img loading="lazy" src="img/twitter.png" alt="imagen logo de twitter"></a>
-				</li>
-			</ul>	
-		</div>
-		<p>&copy; 2020. Todos los derechos reservados.</p>
 	</footer>
+
+	<div>Icons made by <a href="https://www.flaticon.local/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.local/" title="Flaticon">www.flaticon.local</a></div>
 </body>
 </html>
