--- a/mecatronic.html
+++ b/mecatronic.html
@@ -2,40 +2,182 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Proyectos y trabajos mecatronicos del equipo IYW.">
-	<title>Mecatronica</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Equipo de trabajo de IYW nuestro lema es innovar o aprender a mejorar nuestra calidad de trabajo">
+	<meta name="robot" content="index,follow">
+
+	<title>Inventa Tu Mundo - Informatica</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="fonts/style.css">
+	<link rel="SHORTCUT ICON"  href="img/ico-logo.png">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y4T44TXREG"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-Y4T44TXREG');
+	</script>
+
+	<meta name = "twitter: card" content = "summary"> </meta>
+	<meta name = "twitter: site" content="@gilbertoA514"> </meta>
+	<meta name = "twitter: creator" content = "@gilbertoA514" />
+	<meta name="twitter: title" content="Inventa tu mundo">
+	<meta name="twitter: description" content="Equipo de trabajo de IYW nuestro lema es innovar o aprender a mejorar nuestra calidad de trabajo">
+	<meta name="twitter: image" content="">
+	<meta name="twitter:image:alt" content="beaner">
+
+	<script type="application/ld+json">
+		{
+			"@context": "http://schema.org",
+			"@type": "Organization",
+			"name": "Inventa tu mundo",
+			"url": "http://inventatumundo.com",
+			"address": "",
+			"sameAs": [
+			"https://www.facebook.com/InventYourWorld",
+			"https://twitter.com/iywOriginal",
+			"https://www.linkedin.com/company/iyw"
+			]
+		}
+	</script>
 </head>
 <body>
-	<nav class="nav-header">
-		<input type="checkbox" id="check-menu" autocomplete="off" value="value">
-		<label for="check-menu" class="button-menu"><img  src="img/menu.png" alt="imagen boton navegacion movil"></label>
-		<ul class="menu">
-			<li>
-				<a href="index.html">
-					<img class="logo-h" src="img/logo-h.png" alt="logotipo de IYW">
-				</a>
-			</li>
-			<li class="menu-item"><a class="menu-link" href="">Areas</a>
-				<ul class="menu submenu">
-					<li class="menu-item"><a class="menu-link" href="electronica.html">Electronica</a></li>
-					<li class="menu-item"><a class="menu-link" href="informatica.html">Sistemas</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Mecatronica</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Diseño</a></li>
-				</ul>
-			</li>
-			<li class="menu-item"><a class="menu-link" href="#">Contacto</a>
-				<ul class="menu submenu">
-					<li class="menu-item"><a class="menu-link" href="cv.gilberto.alvarez.gamboa.html" target="_blank">Gilberto Alvarez G.</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Fernanda Isabel Contreras F.</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Christopher Gutierrez E.</a></li>
-					<li class="menu-item"><a class="menu-link" href="#">Abigail Sariah Diaz A.</a></li>
-				</ul>
-			</li>
-			<li class="menu-item"><a class="menu-link" href="nosotros.html">Nosotros</a></li>
-			<li class="menu-item"><a class="menu-link" href="#">Blog</a></li>
+	<header >
+		<img class="beaner" src="img/robot-beaner.png" alt="beaner con robots">
+		<h1>Informatica</h1>
+		<p>Aqui podras encontrar todo referente a informatica o sistemas, desarrollamos software en vario lenguajes de 
+		programacion: como paginas web, software de escritorio, base de datos y aplicaciones moviles.
+		Al igual que trabajos relacionados con computacion o redes, por parte de mejoramiento y rendimiento de cualquier 
+		tarea por medio de organizacion y utilizacion de herramientas que veneficia la informatica.</p>
+	</header>
+	<nav id="navegacion">
+		<a id="logo" href="index.html"><img src="img/logo-horizontal.png" alt="Logotipo"/></a>
+		<div class="boton-menu">
+			<a href="#navegacion" class="open"><span class="icon-menu"></span></a>
+			<a href="#" class="close"><span class="icon-menu"></span></a>
+		</div>
+		<ul class="nav-items">
+			<li id="item1"><a href="/blogs/como-gane-un-premio-de-300000-pesos.html"> <span>Blogs</span></a></li>
+			<li id="item2"><a href="#"><span>Contacto</span></a></li>
+			<li id="item3"><a href="#"><span>...</span></a></li>
+			<li id="item4"><a href="#"><span>...</span></a></li>
+			<li id="item5"><a href="#"><span>...</span></a></li>
 		</ul>
 	</nav>
+	<main class="main device">
+		<article class="block block-2">
+			<img src="" alt="">
+			<aside class="aside-tags">
+				<ul>
+					<li><a href=""><img src="img/facebook.png" alt="Herramienta 1"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Herramienta 2"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Persona 1"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Persona 2"></a></li>
+				</ul>
+			</aside>
+			<h3>Proyecto 1</h3>
+		</article>
+		<article class="block block-2">
+			<img src="" alt="">
+			<aside class="aside-tags">
+				<ul>
+					<li><a href=""><img src="img/facebook.png" alt="Herramienta 1"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Herramienta 2"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Persona 1"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Persona 2"></a></li>
+				</ul>
+			</aside>
+			<h3>Proyecto 2</h3>
+		</article>
+		<article class="block block-2">
+			<img src="" alt="">
+			<aside class="aside-tags">
+				<ul>
+					<li><a href=""><img src="img/facebook.png" alt="Herramienta 1"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Herramienta 2"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Persona 1"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Persona 2"></a></li>
+				</ul>
+			</aside>
+			<h3>Proyecto 3</h3>
+		</article>
+		<article class="block block-2">
+			<img src="" alt="">
+			<aside class="aside-tags">
+				<ul>
+					<li><a href=""><img src="img/facebook.png" alt="Herramienta 1"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Herramienta 2"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Persona 1"></a></li>
+					<li><a href=""><img src="img/facebook.png" alt="Persona 2"></a></li>
+				</ul>
+			</aside>
+			<h3>Proyecto 4</h3>
+		</article>
+		<aside>
+			<h4>Recomendaciones de servicios</h4>
+			<p>del mismo tema</p>
+			<section>
+				<a href="">
+					<img class="beaner-articulo" src="img/banner-movil.png" alt="">
+					<h5>Provador 1</h5>
+				</a>
+			</section>
+			<section>
+				<a href="">
+					<img class="beaner-articulo" src="img/banner-movil.png" alt="">
+					<h5>Provador 2</h5>
+				</a>
+			</section>
+		</aside>
+		<section>
+			<h4>Te platicamos como lo hacemos</h4>
+			<video width="100%" height="auto" controls>
+				<source href="https://www.youtube.com/watch?v=7OhXvJ64vyY" type="">
+			</video>
+		</section>
+	</main>
 
+	<footer class="container-footer">
+		<div class="footer-left">
+			<div>
+				<h4>INVENTA TU MUNDO</h4>
+				<p>Inventa tu mundo es proveedor de servicios de tecnología, diseño y dispuesto asesorar 
+					a personas con grandes ideas a llevarlas a la realidad.
+				</p>
+			</div>
+			<div class="nav-footer">
+				<h4>Explorar</h4>
+				<ul>
+					<li><a href="#">Blogs</a></li>
+					<li><a href="#">Servicios</a></li>
+				</ul>
+			</div>
+			<div class="nav-footer">
+				<h4>INFORMACION</h4>
+					<h4>LEGAL</h4>
+						<ul class="list">
+							<li><a class="menu-link" href="privacidad.html">Privacidad</a></li>
+						</ul>
+			</div>
+			<p>&copy; 2020. Todos los derechos reservados.</p>
+		</div>
+		<div class="footer-right">
+			<div class="nav-social-networks">
+				<h4>SIGUENOS EN REDES</h4>
+				<ul>
+					<li><a href="https://www.facebook.com/InventYourWorld/" target="_blank"><img loading="lazy" src="img/facebook.png" alt="Facebook"></a>
+					</li>
+					<li><a href="https://www.linkedin.com/company/iyw" target="_blank"><img loading="lazy" src="img/linkedin.png" alt="linkedin"></a>
+					</li>
+					<li><a href="https://twitter.com/iywOriginal" target="_blank"><img loading="lazy" src="img/twitter.png" alt="imagen logo de twitter"></a>
+					</li>
+					<li><a href="" target="_blank"><img loading="lazy" src="img/correo.png" alt="correo"></a></li>
+					<li><a href="" target="_black"><img loading="lazy" src="img/instagram.png" alt="instagram"></a></li>
+				</ul>	
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
