--- a/cv.gilberto.alvarez.gamboa.html
+++ b/cv.gilberto.alvarez.gamboa.html
@@ -2,102 +2,44 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Curriculum Vitae de Gilberto Alvarez Gamboa, conocimientos y habilidades profecionales.">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<title>CV Gilberto Alvarez Gamboa</title>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<link rel="stylesheet" href="normalize.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Equipo de trabajo de IYW nuestro lema es innovar o aprender a mejorar nuestra calidad de trabajo">
+	<meta name="robot" content="index,follow">
+
+	<title>CV - Gilberto Alvarez Gamboa | Ing Mecatronico</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="shortcut ico" href="img/">
+	<link rel="stylesheet" href="fonts/style.css">
+	<link rel="SHORTCUT ICON"  href="img/ico-logo.png">
 </head>
 <body>
-	<article itemscope itemtype = "http://schema.org/Person">
-		<header class="principal">
-			<img class="foto-perfil" src="img/mia.jpg">
-			<div class="informacion">
-				<h1 itemprop="name">Gilberto Alvarez Gamboa</h1>
-				<p itemprop = "jobTitle">Tecnico en programación</p>
-			</div>
-			<ul>
-				<li itemprop = "email">gilbertoalvarez514<br>@hotmail.com</li>
-				<li itemprop = "telephone">(686) 330-92-37</li>
-				<li>www.iyw.com.mx</li>
-				<li>Mexicali, B.C.</li>
-			</ul>
-		</header>
-		<section class="bloque">
-			<h2 class="secundario etiqueta">Perfil persona</h2>
-			<p>Persona enfocada en ámbito tecnológico, con experiencia en desarrollo web, reparacion electronica y diseño 3D. Mis ámbitos son entregar un trabajo de calidad, donde me desempeño a ser autodidacta en aprendizaje profesional aprendizaje rápido. Me capacito cada vez más para tener la mayor cobertura en mundo tecnológico.
-			Mi meta y aspiraciones son volverme ingeniero y crear un laboratorio de desarrollo de innovación y desarrollo tecnológico para mi ciudad.</p>
-		</section>
-		<section class="bloque">
-			<h2 class="secundario etiqueta">Experiencia laboral</h2>
-			<div class="principal bloque">
-				<h3>Telvista</h3>
-				<em>2017 - 2018</em>
-				<h4>Soporte tecnico</h4>
-				<p>Call center donde resolvía problemas de internet y teléfono, guiando al cliente en llamada para solucionarlo.</p>
-			</div>
-			<div class="principal bloque">
-				<h3>Freelancer</h3>
-				<em>2017-2018</em>
-				<h4>Diseño 3D</h4>
-				<p> Desarrollo de objetos de mecánica en computo para fabricación de la pieza en impresión 3D.</p>
-			</div>
-			<div class="principal bloque">
-				<h3>Valutech</h3>
-				<em>2013 - 2014</em>
-				<h4>Tecnico electronico</h4>
-				<p>Analizar y detectar fallas de celulares a nivel de componente para su reparacion.</p>
-			</div>
-		</section>
-		<section class="bloque">
-			<h2 class="secundario etiqueta">Reconocimientos</h2>
-			<div>
-				<h3>Constancia reparaciones moviles</h3>
-				<p>Reconocimiento por llevar acabo con exito curso de reparaciones moviles</p>
-			</div>
-		</section>
-		<section class="bloque">
-			<h2 class="secundario etiqueta">Educación</h2>
-			<div>
-				<h3>UABC</h3>
-				<strong>Ingenieria en mecatronica</strong>
-				<em>2013 - 2017</em>
-				<p class="bloque">Carrera trunca de ingeniera donde se logra desarrollar equipos automatizados con conocimientos de electronica, mecánica e informática.</p>
-			</div>
-			<div>
-				<h3>Cecyte Xochimilco</h3>
-				<strong>Tecnico en programacion de software</strong>
-				<em>2010 - 2013</em>
-				<p class="bloque">Carrera técnica de programación en lenguaje java para desarrollo completo de software.</p>
-			</div>
-		</section>
-		<section class="bloque">
-			<h2 class="secundario etiqueta">Habilidades</h2>
-			<ul>
-				<li>HTML5/CSS3 <progress class="barra" value="70" max="100"></progress></li>
-				<li>JavaScript <progress class="barra" value="30" max="100"></progress></li>
-				<li>Java <progress class="barra" value="80" max="100"></progress></li>
-				<li>C/C++ <progress class="barra" value="90" max="100"></progress> </li>
-			</ul>
-		</section>
-		<section class="bloque">
-			<h2 class="secundario etiqueta">Áreas de habilidades</h2>
-		</section>
-	</article>
-	<footer class="principal">
-		<p>Todo los derechos reservados</p>
-		<p>creditos a: Freepik</p>
+	<header>
+		<h1>Gilberto Alvarez Gamboa</h1>
+		<p>Soy Ingeniero mecatronico, apacionado por robotica, informatica y diseño 3D</p>
+		<img src="" alt="Foto perfil Gilberto Alvarez Gamboa">
+	</header>
+	<section>
+		<h2>Hola, Soy Gilberto y te cuento mi historia profesional</h2>
+		<p>Soy de mexico, motivado por desarrollar tecnologia de automatizacion y desarrollo de productos tecnologicos.
+			Con experiencia en Front-end con diseño responsable para moviles, desarrollo en IoT y robotica. 
+			Promocionando mi plan de tener laboratorio de desarrollo tecnologico y   
+		</p>
+	</section>
+	<section>
 		<div>
-			<figure>
-				<a href="https://www.facebook.com/gilberto.alvarez.gamboa"><img src="img/facebook.png" alt="icono de facebook"></a>
-				<a href="https://twitter.com/gilbertoA514"><img src="img/twitter.png" alt="icono de twitter"></a>
-				<a href="https://www.linkedin.com/in/gilberto-alvarez-gamboa/"><img src="img/linkedin.png" alt="icono de linkedin"></a>
-				<a href="https://plus.google.com/u/0/111366314481144907308"><img src="img/google-plus.png" alt="icono de google plus"></a>
-				<!--<a href="gilbertoalvarez514@hotmail.com"><img src="img/email.png" alt="icono de email"></a>-->
-			</figure>
+			<img src="" alt="">
+			<h2>Informatica</h2>
+			<p></p>
 		</div>
-	</footer>
+		<div>
+			<img src="" alt="">
+			<h2>Diseño 3d</h2>
+			<p></p>
+		</div>
+		<div>
+			<img src="" alt="">
+			<h2>Robotica</h2>
+			<p></p>
+		</div>
+	</section>
 </body>
 </html>
