Se agrega navegacion todas plataformas y en header se arregla centro texto todas plataformas

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
 	<header>
-		<img class="beaner" src="img/banner-movil.png" alt="beaner">
+		<img class="beaner" src="img/banner.png" alt="beaner">
 		<h1 class="beaner-title">Inventa tu mundo</h1>
 		<p>Todo lo que te imagine se puede ser creado, entra e inventemos tu mundo.</p>
 	</header>
