--- a/informatica.html
+++ b/informatica.html
@@ -20,9 +20,9 @@
 	gtag('config', 'G-Y4T44TXREG');
 	</script>
 
-	<meta name = "twitter: card" content = "summary"> </meta>
-	<meta name = "twitter: site" content="@gilbertoA514"> </meta>
-	<meta name = "twitter: creator" content = "@gilbertoA514" />
+	<meta name="twitter: card" content = "summary"> </meta>
+	<meta name="twitter: site" content="@gilbertoA514"> </meta>
+	<meta name="twitter: creator" content = "@gilbertoA514" />
 	<meta name="twitter: title" content="Inventa tu mundo">
 	<meta name="twitter: description" content="Equipo de trabajo de IYW nuestro lema es innovar o aprender a mejorar nuestra calidad de trabajo">
 	<meta name="twitter: image" content="">
@@ -44,7 +44,7 @@
 	</script>
 </head>
 <body>
-	<header >
+	<header>
 		<img class="beaner" src="img/informatica-beaner.png" alt="beaner informatico">
 		<h1>Informatica</h1>
 		<p>Aqui podras encontrar todo referente a informatica o sistemas, desarrollamos software en vario lenguajes de 
@@ -71,10 +71,8 @@
 			<img src="" alt="">
 			<aside class="aside-tags">
 				<ul>
-					<li><a href=""><img src="img/facebook.png" alt="Herramienta 1"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Herramienta 2"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Persona 1"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Persona 2"></a></li>
+					<li><a href=""><img src="img/icon-c++.png" alt="Herramienta 1"></a></li>
+					<li><a href=""><img src="img/icon-mysql.png" alt="Herramienta 2"></a></li>
 				</ul>
 			</aside>
 			<h3>Proyecto 1</h3>
@@ -83,10 +81,9 @@
 			<img src="" alt="">
 			<aside class="aside-tags">
 				<ul>
-					<li><a href=""><img src="img/facebook.png" alt="Herramienta 1"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Herramienta 2"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Persona 1"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Persona 2"></a></li>
+					<li><a href=""><img src="img/icon-html5.png" alt="Herramienta 1"></a></li>
+					<li><a href=""><img src="img/icon-css3.png" alt="Herramienta 2"></a></li>
+					<li><a href=""><img src="img/icon-js.png" alt="Persona 1"></a></li>
 				</ul>
 			</aside>
 			<h3>Proyecto 2</h3>
@@ -95,26 +92,13 @@
 			<img src="" alt="">
 			<aside class="aside-tags">
 				<ul>
-					<li><a href=""><img src="img/facebook.png" alt="Herramienta 1"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Herramienta 2"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Persona 1"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Persona 2"></a></li>
+					<li><a href=""><img src="img/icon-python.png" alt="Herramienta 1"></a></li>
+					<li><a href=""><img src="img/icon-mysql.png" alt="Herramienta 2"></a></li>
 				</ul>
 			</aside>
 			<h3>Proyecto 3</h3>
 		</article>
-		<article class="block block-2">
-			<img src="" alt="">
-			<aside class="aside-tags">
-				<ul>
-					<li><a href=""><img src="img/facebook.png" alt="Herramienta 1"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Herramienta 2"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Persona 1"></a></li>
-					<li><a href=""><img src="img/facebook.png" alt="Persona 2"></a></li>
-				</ul>
-			</aside>
-			<h3>Proyecto 4</h3>
-		</article>
+		
 		<aside>
 			<h4>Recomendaciones de servicios</h4>
 			<p>del mismo tema</p>
